Fix some alignment issues on the Past Runs page

--- a/public/components/past-runs/map/map.less
+++ b/public/components/past-runs/map/map.less
@@ -3,12 +3,12 @@ lbh3-past-runs-map {
 
 	.map {
 		display: block;
-		height: ~'calc(100vh - 218px)';
+		height: ~'calc(100vh - 234px)';
 		min-height: 256px;
 		width: 100%;
 
 		@supports(padding: max(0px)) {
-			height: ~'calc(100vh - 218px - env(safe-area-inset-bottom) - env(safe-area-inset-top))';
+			height: ~'calc(100vh - 234px - env(safe-area-inset-bottom) - env(safe-area-inset-top))';
 		}
 
 		.gm-style-iw.gm-style-iw-c {
